# zero-to-production

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: local.yaml  production.yaml
migrations/: 20220102175618_add_status_to_subscription.sql  20220102181951_make_subscription_status_not_null.sql  20220102182221_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirmation.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirmation.rs
