[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"
config = "0.11.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
log = "0.4.14"
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.8"
serde-aux = "2.3.0"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
reqwest = { version = "0.11.4", default_features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
rand_core = "0.6.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
wiremock = "0.5.8"
once_cell = "1.8.0"
actix-rt = "2.2.0"
tokio = { version = "1.12.0", features = ["macros", "rt"] }
claim = "0.5.0"
serde_json = "1"
linkify = {version = "0.8.0"}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "offline",
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
